Updates to navbar and added Less variables file

--- a/MyWebsite/MyWebsite/compilerconfig.json
+++ b/MyWebsite/MyWebsite/compilerconfig.json
@@ -6,5 +6,9 @@
   {
     "outputFile": "public/stylesheets/mixins.css",
     "inputFile": "public/stylesheets/less/mixins.less"
+  },
+  {
+    "outputFile": "public/stylesheets/variables.css",
+    "inputFile": "public/stylesheets/less/variables.less"
   }
 ]
